force-app/main/default/objects/KimbleOne__ActivityExpenseCategoryProfile__c/KimbleOne__ActivityExpenseCategoryProfile__c.object-meta.xml
<CustomObject>
    <label>Activity Expense Category Profile</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Expense Category Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>