force-app/main/default/objects/KimbleOne__ActivityExpenseCategoryProfile__c/fields/KimbleOne__ActivityExpenseCategory__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActivityExpenseCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Obsolete - Activity Expense Category</label>
    <referenceTo>KimbleOne__ActivityExpenseCategory__c</referenceTo>
    <relationshipLabel>Activity Expense Category Profiles</relationshipLabel>
    <relationshipName>ActivityExpenseCategoryProfiles</relationshipName>
    <type>Lookup</type>
</CustomField>