force-app/main/default/objects/KimbleOne__ActivityExpenseCategoryProfile__c/fields/KimbleOne__ActualCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActualCost__c</fullName>
    <label>Actual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>