force-app/main/default/objects/KimbleOne__ActivityExpenseCategoryProfile__c/fields/KimbleOne__CalculationNotes__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CalculationNotes__c</fullName>
    <label>CalculationNotes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>