force-app/main/default/objects/KimbleOne__ActivityExpenseCategoryProfile__c/fields/KimbleOne__ForecastNetAmountPerUnit__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastNetAmountPerUnit__c</fullName>
    <label>Z_Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>