force-app/main/default/objects/KimbleOne__ActivityExpenseCategoryProfile__c/fields/KimbleOne__ForecastRemainingCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastRemainingCost__c</fullName>
    <label>Remaining Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>