force-app/main/default/objects/KimbleOne__ActivityExpenseCategoryProfile__c/fields/KimbleOne__ForecastRemainingUnits__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastRemainingUnits__c</fullName>
    <label>Z_Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>