force-app/main/default/objects/KimbleOne__ActivityExpenseCategoryProfile__c/fields/KimbleOne__ForecastRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastRevenue__c</fullName>
    <formula>KimbleOne__ActualRevenue__c +  KimbleOne__ForecastRemainingRevenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>