force-app/main/default/objects/KimbleOne__ActivityExpenseCategoryProfile__c/fields/KimbleOne__ResourcedActivityScopedWith__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourcedActivityScopedWith__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scoped With</label>
    <referenceTo>KimbleOne__ResourcedActivity__c</referenceTo>
    <relationshipLabel>Activity Expense Category Profiles</relationshipLabel>
    <relationshipName>ActivityExpenseCategoryProfiles</relationshipName>
    <type>Lookup</type>
</CustomField>