force-app/main/default/objects/KimbleOne__ActivityExpenseCategoryProfile__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__ResourcedActivity__c</columns>
    <columns>KimbleOne__ResourcedActivityScopedWith__c</columns>
    <columns>KimbleOne__BusinessUnit__c</columns>
    <columns>KimbleOne__ExpenseCategory__c</columns>
    <columns>KimbleOne__ActivityExpenseCategory__c</columns>
    <columns>KimbleOne__ForecastRemainingRevenue__c</columns>
    <columns>KimbleOne__InvoicingCcyForecastRemainingRevenue__c</columns>
    <columns>KimbleOne__CalculationNotes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>